# libvmod_varnish4_geoip

./: .gitignore  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  libvmod-varnish4-geoip.install  libvmod-varnish4-geoip.symbols  libvmod_varnish4_geoip.install  rules
src/: Makefile.am  vmod_varnish4_geoip.c  vmod_varnish4_geoip.vcc
src/tests/: test_no_redirect_1.vtc  test_no_redirect_2.vtc  test_no_redirect_3.vtc  test_no_redirect_5.vtc  test_redirect_1.vtc  test_referer_equals_host.vtc  test_referer_not_set_user_agent_mozilla_check_country_at.vtc
